[package]
name = "img-yt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
tempfile = "3.8.0"
tokio = { version = "1.32.0", features = ["full"] }
